fixed stretched slides

--- a/css/theme.css
+++ b/css/theme.css
@@ -52,3 +52,7 @@ body.page {
   background-color: #8a2890;
   border-color: #74206e;
 }
+
+.slide {
+  background-size: cover;
+}
